--- a/CommTest/CommTest.csproj
+++ b/CommTest/CommTest.csproj
@@ -58,14 +58,21 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serial\ConfigPage.cs">
+    <Compile Include="Config\ConfigPage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Serial\ConfigPage.Designer.cs">
+    <Compile Include="Config\ConfigPage.Designer.cs">
       <DependentUpon>ConfigPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Serial\SerialPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Serial\SerialPage.Designer.cs">
+      <DependentUpon>SerialPage.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -76,8 +83,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Serial\ConfigPage.resx">
+    <EmbeddedResource Include="Config\ConfigPage.resx">
       <DependentUpon>ConfigPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Serial\SerialPage.resx">
+      <DependentUpon>SerialPage.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
